# Phoenix

./: .gitignore  PRODUCT_ANALYSIS.md  README.md  UX_REVIEW.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.electron.json  vite.config.ts
electron/: main.ts  preload.ts
rust-backend/: Cargo.toml
rust-backend/src/: bitlocker.rs  disk_reader.rs  file_carver.rs  filesystem_disk_reader.rs  filesystem_recovery_engine.rs  main.rs  main_filesystem.rs  ntfs_parser.rs  recovery_engine.rs  vss.rs
src/: App.tsx  index.css  types.ts  vite-env.d.ts
src/components/: About.tsx  ChatArea.tsx  ChatMessage.tsx  Dashboard.tsx  ScanView.tsx  Settings.tsx  Sidebar.tsx  TitleBar.tsx
src/components/ui/: card-hover-effect.tsx
src/context/: ThemeContext.tsx
