[package]
name = "data_recovery_backend"
version = "2.0.0"
edition = "2021"

# Raw Disk Backend (original - for unencrypted drives)
[[bin]]
name = "data_recovery_backend"
path = "src/main.rs"

# FileSystem Backend (new - for encrypted/BitLocker drives)
[[bin]]
name = "data_recovery_filesystem"
path = "src/main_filesystem.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
chrono = "0.4"
byteorder = "1.5"
memmap2 = "0.9"
rayon = "1.8"
hex = "0.4"
crc32fast = "1.3"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "fileapi", "winbase", "errhandlingapi", "winnt", "handleapi",
    "ioapiset", "winioctl", "processthreadsapi", "securitybaseapi",
    "winerror", "impl-default", "std"
] }
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Ioctl",
    "Win32_System_IO",
    "Win32_Security"
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
